--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,6 +41,12 @@
 			<a class="h2" th:href="@{/productos/nuevo}">Agregar producto</a>
 		</div>
 		<div class="p-2" >
+			<a class="h2" th:href="@{/marcas}">Lista de marcas</a>
+		</div>
+		<div class="p-2" >
+			<a class="h2" th:href="@{/marcas/nueva}">Agregar marca</a>
+		</div>
+		<div class="p-2" >
 			<a class="h2" th:href="@{/categorias/nuevo}">Crud con JUnit</a>
 		</div>
 	</div>
