--- a/src/main/resources/templates/marca_formulario.html
+++ b/src/main/resources/templates/marca_formulario.html
@@ -26,30 +26,24 @@
 
 	<div class="container text-center">
 		<div>
-		<h1 th:if="${producto.id == null}">Registro de productos</h1>
-		<h1 th:unless="${producto.id == null}">Editar producto</h1>
+		<h1 th:if="${marca.id == null}">Registro de marcas</h1>
+		<h1 th:unless="${marca.id == null}">Editar marca</h1>
 		</div>
-		<form  th:action="@{/productos/guardar}" th:object="${producto}" method="post" style="max-width:600px; margin:0 auto;">
-			<input type="hidden" th:field="*{id}" th:value="${producto.id}"/>
+		<form  th:action="@{/marcas/guardar}" th:object="${marca}" method="post" style="max-width:600px; margin:0 auto;">
+		<input type="hidden" th:field="*{id}" th:value="${marca.id}"/>
+		
 			<div class="m-3">
 				<div class="form-group row">
-				<label class="col-form-label col-sm-4">Nombre del producto :</label>
+				<label class="col-form-label col-sm-4">Nombre de la marca :</label>
 				<div class="col-sm-8">
 				<input type="text" th:field="*{nombre}" class="form-control" required="required">
 				</div>
 				</div>
 				
 				<div class="form-group row">
-				<label class="col-form-label col-sm-4">Precio del producto :</label>
+				<label class="col-form-label col-sm-4">Seleccione categorias :</label>
 				<div class="col-sm-8">
-				<input type="text" th:field="*{precio}" class="form-control" required="required">
-				</div>
-				</div>
-				
-				<div class="form-group row">
-				<label class="col-form-label col-sm-4">Categoria :</label>
-				<div class="col-sm-8">
-						<select th:field="*{categoria}" class="form-control" required="required">
+						<select th:field="*{categorias}" class="form-control" multiple="multiple" required="required">
 							<th:block th:each="categoria : ${listaCategorias}">
 								<option th:text="${categoria.nombre}" th:value="${categoria.id}">
 							</th:block>
