--- a/src/main/resources/templates/producto_formulario.html
+++ b/src/main/resources/templates/producto_formulario.html
@@ -56,7 +56,59 @@
 						</select>
 				</div>
 				</div>
+				<!--Se Cargan los detalles  -->
+				<th:block th:unlles="${producto.id == null}" th:each="detalle, status : ${producto.detalles}" >
+					<input type="hidden" name="detalleID" th:value="${detalle.id}">
 				
+						<div class="form-group row">
+							<label class="col-form-label col-sm-4">Detalles  # [[${status.count}]] : </label>
+							<div class="col-sm-4">
+								<input type="text" name="detallesNombre" th:value="${detalle.nombre}" class="form-control" required="required">
+							</div>
+							
+							<div class="col-sm-4">
+								<input type="text" name="detallesValor" th:value="${detalle.valor}" class="form-control" required="required">
+							</div>
+						</div>
+				</th:block>
+				
+				<!--Se agregan nuevos detalles  -->
+				<th:block th:if="${producto.id == null}">
+				
+				<div class="form-group row">
+							<label class="col-form-label col-sm-4">Detalles  #1: </label>
+							<div class="col-sm-4">
+								<input type="text" name="detallesNombre"  class="form-control" placeholder="Nombre" required="required">
+							</div>
+							
+							<div class="col-sm-4">
+								<input type="text" name="detallesValor" class="form-control" placeholder="Valor" required="required">
+							</div>
+						</div>
+						
+						<div class="form-group row">
+							<label class="col-form-label col-sm-4">Detalles  #2: </label>
+							<div class="col-sm-4">
+								<input type="text" name="detallesNombre"  class="form-control" placeholder="Nombre" required="required">
+							</div>
+							
+							<div class="col-sm-4">
+								<input type="text" name="detallesValor" class="form-control" placeholder="Valor" required="required">
+							</div>
+						</div>
+						
+						<div class="form-group row">
+							<label class="col-form-label col-sm-4">Detalles  #3: </label>
+							<div class="col-sm-4">
+								<input type="text" name="detallesNombre"  class="form-control" placeholder="Nombre" required="required">
+							</div>
+							
+							<div class="col-sm-4">
+								<input type="text" name="detallesValor" class="form-control" placeholder="Valor" required="required">
+							</div>
+						</div>
+				
+				</th:block>
 				
 				<div class="text-center p">
 					<button type="submit" class="btn btn-primary">Guardar</button>
