--- a/src/main/resources/templates/usuarios.html
+++ b/src/main/resources/templates/usuarios.html
@@ -26,35 +26,39 @@
 
 	<div class="container text-center">
 		<div>
-			<h1>Bienvenido a la aplicacion de inventario</h1>
+			<h1>Lista de usuarios</h1>
 		</div>
-		<div class="p-2" >
-			<a class="h2" th:href="@{/categorias}">Lista de categorias</a>
+
+		<br>
+		<div>
+			<table class="table table-bordered">
+				<thead class="thead-dark">
+					<tr>
+						<th>ID</th>
+						<th>Correo</th>
+						<th>Contraseña</th>
+						<th>Roles</th>
+						<th>Acciones</th>
+						
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="usuario : ${listaUsuarios}">
+						<td th:text="${usuario.id}">ID</td>
+						<td th:text="${usuario.email}">Nombre</td>
+						<td th:text="${usuario.password}">contraseña</td>
+						<td th:text="${usuario.roles}">contraseña</td>
+						<td>
+					<a th:href="@{'/usuarios/editar'+'/'+ ${usuario.id}}" class="btn btn-info">Editar</a>
+							&nbsp; &nbsp;
+							<a th:href="@{'/usuarios/eliminar'+'/'+ ${usuario.id}}" class="btn btn-danger">Eliminar</a> 	
+						</td>
+					</tr>
+					
+				</tbody>
+			</table>
 		</div>
-		<div class="p-2" >
-			<a class="h2" th:href="@{/categorias/nuevo}">Agregar categoria</a>
-		</div>
-		<div class="p-2" >
-			<a class="h2" th:href="@{/productos}">Lista de productos</a>
-		</div>
-		<div class="p-2" >
-			<a class="h2" th:href="@{/productos/nuevo}">Agregar producto</a>
-		</div>
-		<div class="p-2" >
-			<a class="h2" th:href="@{/marcas}">Lista de marcas</a>
-		</div>
-		<div class="p-2" >
-			<a class="h2" th:href="@{/marcas/nueva}">Agregar marca</a>
-		</div>
-		<div class="p-2" >
-			<a class="h2" th:href="@{/usuarios}">Lista de usuarios</a>
-		</div>
-		<div class="p-2" >
-			<a class="h2" th:href="@{/usuarios/nuevo}">Agregar usuario</a>
-		</div>
-		<div class="p-2" >
-			<a class="h2" th:href="@{/categorias/nuevo}">Crud con JUnit</a>
-		</div>
+
 	</div>
 </body>
 </html>
